--- a/hyphoto/uncate.html
+++ b/hyphoto/uncate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Phoebe @Caffebene - HYPhoto</title>
+<title>Cannot be Categorized - HYPhoto</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css">
@@ -13,12 +13,12 @@
                 <!-- Header -->
                 <header id="header">
                         <h1>
-                                <strong>HYPhoto</strong> Portrait Selection - Phoebe @Caffebene
+                                <strong>HYPhoto</strong> Cannot be Categorized
                         </h1>
                         <nav>
                                 <ul>
                                         <li>
-                                                <a href="https://frankieyuan.com/hyphoto/" class="icon fa-home">Home
+                                                <a href="https://frankieyuan.com/photo.html" class="icon fa-home">Home
                                                         Page</a>
                                 </ul>
                         </nav>
@@ -26,57 +26,77 @@
                 <!-- Main -->
                 <div id="main">
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UW-sakura-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UW-sakura-min.jpg"
                                                 alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>UW Sakura</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/winterchicago-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/winterchicago-min.jpg"
                                                 alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>fire in chicago's winter</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Lake-Michigan-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Lake-Michigan-min.jpg"
                                                 alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>lake michigan</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Jiuzhaigou-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Jiuzhaigou-min.jpg"
                                                 alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>jiuzhaigou</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/fallchampaign-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/fallchampaign-min.jpg"
                                                 alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>fall champaign</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UofI-South-Quad-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/UofI-South-Quad-min.jpg"
                                                 alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>UofI South Quad</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/sunriseWestLake-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/sunriseWestLake-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2>sunrise west lake</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/roof-min.jpg"
+                                        class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/roof-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2>roof</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Air-CHINA-min.jpg"
+                                        class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/uncate/Air-CHINA-min.jpg"
+                                                alt="">
+                                </a>
+                                <h2>air china</h2>
                                 <p>
                         </article>
                 </div>
