--- a/hyphoto/city.html
+++ b/hyphoto/city.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Phoebe @Caffebene - HYPhoto</title>
+<title>City in my Mind - HYPhoto</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css">
@@ -13,12 +13,12 @@
                 <!-- Header -->
                 <header id="header">
                         <h1>
-                                <strong>HYPhoto</strong> Portrait Selection - Phoebe @Caffebene
+                                <strong>HYPhoto</strong> City in my Mind
                         </h1>
                         <nav>
                                 <ul>
                                         <li>
-                                                <a href="https://frankieyuan.com/hyphoto/" class="icon fa-home">Home
+                                                <a href="https://frankieyuan.com/photo.html" class="icon fa-home">Home
                                                         Page</a>
                                 </ul>
                         </nav>
@@ -26,57 +26,164 @@
                 <!-- Main -->
                 <div id="main">
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/3.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/3.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>Sacred Heart Cathedral</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/4.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/4.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>Sacred Heart Cathedral</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/Sacred%20Heart%20Cathedral-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/Sacred%20Heart%20Cathedral-min.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>Sacred Heart Cathedral</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/tallandtaller-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/tallandtaller-min.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>taller</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/lookupguangzhou-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/lookupguangzhou-min.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>look up guangzhou</h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
-                                        class="image">
-                                        <img src="url"
-                                                alt="">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/TusPark-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/TusPark-min.jpg" alt="">
                                 </a>
-                                <h2></h2>
+                                <h2>Tuspark</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/Tsinghua-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/Tsinghua-min.jpg" alt="">
+                                </a>
+                                <h2>tsinghua</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/view-to-capital-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/view-to-capital-min.jpg" alt="">
+                                </a>
+                                <h2>view to captial</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/wangjingSOHO-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/wangjingSOHO-min.jpg" alt="">
+                                </a>
+                                <h2>Wangjing soho</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/wangjingSOHO2-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/wangjingSOHO2-min.jpg" alt="">
+                                </a>
+                                <h2>wangjing SOHO</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/UW-lib-in-church-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/UW-lib-in-church-min.jpg" alt="">
+                                </a>
+                                <h2>UW lib in "church"</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/UW-Quad-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/UW-Quad-min.jpg" alt="">
+                                </a>
+                                <h2>UW Quad</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/Ferris-wheel-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/Ferris-wheel-min.jpg" alt="">
+                                </a>
+                                <h2>ferris-wheel</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/seattle2-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/seattle2-min.jpg" alt="">
+                                </a>
+                                <h2>seattle</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/seattle-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/seattle-min.jpg" alt="">
+                                </a>
+                                <h2>seattle</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/ice-below-cloud-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/ice-below-cloud-min.jpg" alt="">
+                                </a>
+                                <h2>ice below cloud</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/train-to-trump-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/train-to-trump-min.jpg" alt="">
+                                </a>
+                                <h2>train to trump</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/NYC-twin-bridges-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/NYC-twin-bridges-min.jpg" alt="">
+                                </a>
+                                <h2>"twin" bridges</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/NYC-brooklyn-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/NYC-brooklyn-min.jpg" alt="">
+                                </a>
+                                <h2>Brooklyn Bridge</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/NYC%20Skyline-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/NYC%20Skyline-min.jpg" alt="">
+                                </a>
+                                <h2>NYC skyline</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/noexit-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/noexit-min.jpg" alt="">
+                                </a>
+                                <h2>NO-EXIT NYC</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/NYC-road-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/NYC-road-min.jpg" alt="">
+                                </a>
+                                <h2>NYC Road</h2>
+                                <p>
+                        </article>
+                        <article class="thumb">
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/kyotostation-min.jpg" class="image">
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/city/kyotostation-min.jpg" alt="">
+                                </a>
+                                <h2>kyoto station</h2>
                                 <p>
                         </article>
                 </div>
