--- a/photo.html
+++ b/photo.html
@@ -96,22 +96,19 @@
                         </span>
                         <span class="image fit">
                             <a href="/hyphoto/lolita.html"><img src="https://frankieyuan.com/images/lolita.jpg" alt="">
-                                <h2>lolita</h2>
+                                <h2>Lolita</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/jk.html"><img src="https://frankieyuan.com/images/jk.jpg" alt="">
-                                <h2>JK</h2>
+                            <a href="/hyphoto/cosplay.html"><img src="https://frankieyuan.com/images/cos.jpg" alt="">
+                                <h2>Cosplay</h2>
                             </a>
                         </span>
                         <span class="image fit">
-                            <a href="/hyphoto/jk.html"><img src="https://frankieyuan.com/images/jk.jpg" alt="">
-                                <h2>JK</h2>
+                            <a href="/hyphoto/daily.html"><img src="https://frankieyuan.com/images/daily.jpg" alt="">
+                                <h2>Daily</h2>
                             </a>
                         </span>
-
-                        <a href="http://frankieportrait.lofter.com/" target="_blank" class="button primary fit">Portrait
-                            Lofter Index</a>
                     </div>
                     <!-- Break -->
                 </div>
