--- a/hyphoto/daily.html
+++ b/hyphoto/daily.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Phoebe @Caffebene - HYPhoto</title>
+<title>Daily - Frankie Portrait</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="assets/css/main.css">
@@ -13,7 +13,7 @@
                 <!-- Header -->
                 <header id="header">
                         <h1>
-                                <strong>HYPhoto</strong> Portrait Selection - Phoebe @Caffebene
+                                <strong>Frankie Portrait</strong> Daily
                         </h1>
                         <nav>
                                 <ul>
@@ -26,54 +26,54 @@
                 <!-- Main -->
                 <div id="main">
                         <article class="thumb">
-                                <a href="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                         class="image">
-                                        <img src="url"
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                         class="image">
-                                        <img src="url"
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                         class="image">
-                                        <img src="url"
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                         class="image">
-                                        <img src="url"
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                         class="image">
-                                        <img src="url"
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                                 alt="">
                                 </a>
                                 <h2></h2>
                                 <p>
                         </article>
                         <article class="thumb">
-                                <a href="url"
+                                <a href="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                         class="image">
-                                        <img src="url"
+                                        <img src="https://frankieyuan-1257091934.cos.ap-beijing.myqcloud.com/daily/"
                                                 alt="">
                                 </a>
                                 <h2></h2>
